...
                  ElevatedButton(
                    onPressed: bill == null
                        ? null
                        : () {
                            Routemaster.of(context).push('bill');
                          },
                    child: const Text('Оплатить'),
                  ),
                ],
              ),
            ],
          ),
        ),
...
